# zstrzeszow-scraper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: array.c  array.h  database.c  database.h  error.c  error.h  list.c  list.h  main.c  main.h  timetable.c  timetable.h
src/scraper/: list.c  list.h  timetable.c  timetable.h
src/server/: handler.c  handler.h  listener.c  listener.h  router.c  router.h
src/utils/: array.c  array.h  cellmap.c  cellmap.h  content_type.c  content_type.h  error.c  error.h  hour_util.c  hour_util.h  logger.c  logger.h  str_replace.c  str_replace.h
views/: 404.html  index.html
views/assets/: style.css
